<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_name"
                android:hint="@string/hint_book_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_book_price"
                android:hint="@string/hint_book_price"
                android:inputType="number"
                style="@style/EditorUnitsStyle" />

            <!-- Quantity field -->

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/subtract_quantity"
                    android:layout_height="48dp"
                    android:layout_width="48dp"
                    android:text="-"
                    />


                <EditText
                    android:id="@+id/edit_book_quantity"
                    android:hint="@string/hint_book_quantity"
                    android:inputType="number"
                    style="@style/EditorUnitsStyle"
                    />

                <Button
                    android:id="@+id/add_quantity"
                    android:layout_height="48dp"
                    android:layout_width="48dp"
                    android:text="+"
                    />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_supplier"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Supplier field -->
            <EditText
                android:id="@+id/edit_book_supplier"
                android:hint="@string/hint_book_supplier"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Supplier Number field -->
            <EditText
                android:id="@+id/edit_book_supplier_number"
                android:hint="@string/hint_book_supplier_number"
                android:inputType="phone"
                style="@style/EditorFieldStyle" />

            <Button
                android:id="@+id/action_contact_supplier"
                android:layout_height="48dp"
                android:layout_width="match_parent"
                android:text="Call Supplier" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
